--- a/webportal/webapp/src/app/account/datasets/datasets.component.html
+++ b/webportal/webapp/src/app/account/datasets/datasets.component.html
@@ -21,20 +21,31 @@
           <p> Files that are uploaded from the web portal will be saved in the folder - <b>{{ userName }}</b><b>/uploaded_files</b></p>
           <p> Files that you would like to export out of the system must be uploaded to the folder - <b>export_requests</b></p>
           <span style="color:grey">Any file type can be downloaded.</span>
-          <p-table #dt [columns]="cols" [value]="myDatasets" [(selection)]="selectedFiles" [paginator]="true" [rows]="10" [totalRecords]="myDatasets.length"  dataKey="filename">
-            <ng-template pTemplate="header" let-columns>
+          <p-table #dt [value]="myDatasets" [(selection)]="selectedFiles" [paginator]="true" [rowsPerPageOptions]="[10, 25, 50]" [totalRecords]="myDatasets.length"  dataKey="filename" [globalFilterFields]="['filename']">
+            <ng-template pTemplate="caption">
+              <div class="flex">
+                  <button pButton label="Clear" class="p-button-outlined" icon="pi pi-filter-slash" (click)="clear(dt)"></button>
+                  <span class="p-input-icon-left ml-auto">
+                      <i class="pi pi-search"></i>
+                      <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Search files" />
+                  </span>
+              </div>
+            </ng-template>
+            <ng-template pTemplate="header">
                 <tr>
                     <th style="width: 2.25em">
                         <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
                     </th>
-                    <th *ngFor="let col of columns" pSortableColumn="Filename" [ngClass]="{smallWidth: col.header != 'Filename'}">
-                        {{col.header}} <br/>
-                        <input size="40" *ngIf="col.header == 'Filename'" pInputText type="text" (input)="dt.filter($event.target.value, col.field, 'contains')">
-                        <p-sortIcon field="Filename"></p-sortIcon>
+                    <th pSortableColumn="filename">
+                        Filename
+                        <p-sortIcon field="filename"></p-sortIcon>
                     </th>
+                    <th [ngClass]="smallWidth">Export</th>
+                    <th [ngClass]="smallWidth">Publish</th>
+                    <th [ngClass]="smallWidth">Export Request Status</th>
                 </tr>
             </ng-template>
-            <ng-template pTemplate="body" let-myDataset let-columns="columns">
+            <ng-template pTemplate="body" let-myDataset>
                 <tr *ngIf="!myDataset.filename.endsWith('/')">
                     <td>
                         <p-tableCheckbox [value]="myDataset" [disabled]="!myDataset.download || myDataset.download=='false'"></p-tableCheckbox>
