Fixed Submit button on request export form

--- a/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
+++ b/webportal/webapp/src/app/account/dialog-box/dialog-box.component.html
@@ -877,18 +877,18 @@
         >
           CANCEL
         </button>
-      </mat-dialog-actions>
-      <div>
+
+        <!--
         <p-button
           label="Submit"
-          styleClass="btn btn-primary dotBtn request-exportSubmitBtn"
+          class="btn btn-primary dotBtn request-exportSubmitBtn"
           [disabled]="
             (!messageModel.autoderiveddataset || !messageModel.autoreason) &&
             autoExportRequestSelected
           "
           (click)="submitRequest()"
         ></p-button>
-        <!--
+      -->
         <button
           class="btn btn-primary dotBtn request-exportSubmitBtn"
           [disabled]="
@@ -899,9 +899,7 @@
         >
           SUBMIT
         </button>
-        -->
-      </div>
-      <mat-dialog-actions>
+
         <button
           class="btn btn-primary dotBtn request-exportPreviousBtn"
           (click)="onPreviousBtnClick()"
